--- a/src/app/main/main-message-area/message-area-header/channel-description/channel-description.component.html
+++ b/src/app/main/main-message-area/message-area-header/channel-description/channel-description.component.html
@@ -24,7 +24,7 @@
         mat-button
         [matMenuTriggerFor]="leaveChannelMenu"
         (click)="toggleBorder('leave-channel')"
-        class="button-primary"
+        class="button-primary leave-channel-button"
       >
         <span>Channel verlassen</span>
       </button>
