--- a/src/app/main/main-message-area/message-area-header/channel-description/channel-edit-description/channel-edit-description.component.scss
+++ b/src/app/main/main-message-area/message-area-header/channel-description/channel-edit-description/channel-edit-description.component.scss
@@ -6,7 +6,7 @@
   justify-content: flex-start;
   gap: 30px;
   align-items: flex-start;
-  padding-bottom: 40px;
+  padding: 0px 5px 40px 5px;
 }
 
 .description-container-headline {
