--- a/src/app/main/main-message-area/message-area-header/channel-description/channel-description.component.scss
+++ b/src/app/main/main-message-area/message-area-header/channel-description/channel-description.component.scss
@@ -140,21 +140,6 @@ app-channel-edit-description {
   width: unset !important;
 }
 
-@media only screen and (max-width: 500px) {
-  section {
-    width: 100%;
-    height: 100%;
-  }
-
-  h2 {
-    max-width: 90%;
-
-    p {
-      max-width: 80%;
-    }
-  }
-}
-
 app-channel-members-list {
   width: 100%;
   display: none;
@@ -166,8 +151,57 @@ app-channel-members-list {
   border-radius: 20px;
 }
 
-@media only screen and (max-width: 500px) {
-  app-channel-members-list {
+@media only screen and (max-width: 600px) {
+  section {
+    width: 100%;
+    max-height: 100svh;
+  }
+
+  .channel-description-container {
+    margin-bottom: 10px;
+    margin-top: 70px;
+  }
+
+  h2 {
+    max-width: 90%;
+
+    p {
+      max-width: 80%;
+    }
+  }
+
+  .headline {
+    position: fixed;
+    height: 70px;
+    align-items: flex-end;
+    padding-bottom: 5px;
+    top: 0;
+    box-shadow: 0px 2px 10px 0px #00000014;
+  }
+
+  app-channel-members-list,
+  app-channel-display-name,
+  app-channel-edit-name,
+  app-channel-display-description,
+  app-channel-edit-description {
     display: flex;
+    width: 98%;
+  }
+
+  .leave-channel-container {
+    width: 98%;
+  }
+}
+
+@media only screen and (max-width: 340px) {
+  section {
+    padding: 10px 5px;
+  }
+
+  h2 {
+    max-width: 80%;
+    p {
+      max-width: 70%;
+    }
   }
 }
