--- a/src/app/main/main-message-area/message-area-header/channel-new-member/channel-new-member.component.html
+++ b/src/app/main/main-message-area/message-area-header/channel-new-member/channel-new-member.component.html
@@ -1,7 +1,7 @@
 <section (click)="$event.stopPropagation(); closeAutocomplete()">
   <div class="headline">
     <h2>Leute hinzufügen</h2>
-    <mat-icon (click)="header.closeMenu('add-member')">close</mat-icon>
+    <mat-icon (click)="header.closeMenu('add-member'); channelService.addMemberMenu = false">close</mat-icon>
   </div>
   <div class="channel-name">
     <div>
