--- a/src/app/shared/components/emoji-picker/emoji-picker.component.scss
+++ b/src/app/shared/components/emoji-picker/emoji-picker.component.scss
@@ -1,7 +1,7 @@
 ::ng-deep {
   .mat-mdc-menu-panel {
     max-width: none !important;
-    border-radius: var(--border-radius) !important;
+    border-radius: var(--border-radius);
   }
 
   @media (max-width: 350px) {
