--- a/src/app/main/main-message-area/thread/thread-header/thread-header.component.scss
+++ b/src/app/main/main-message-area/thread/thread-header/thread-header.component.scss
@@ -26,6 +26,10 @@ div {
     font-size: 18px;
     color: var(--purple2-color);
     font-size: 14px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 180px;
   }
 
   mat-icon {
@@ -43,5 +47,17 @@ div {
     cursor: pointer;
     background-color: var(--bg-color);
     color: var(--purple3-color);
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  div span {
+    max-width: 120px;
+  }
+}
+
+@media only screen and (max-width: 330px) {
+  div span {
+    max-width: 100px;
   }
 }
