--- a/src/app/main/main-message-area/chat-components/own-message-template/own-message-template.component.scss
+++ b/src/app/main/main-message-area/chat-components/own-message-template/own-message-template.component.scss
@@ -120,10 +120,24 @@ img {
   }
 }
 
+@media only screen and (max-width: 600px) {
+  ::ng-deep {
+    .mat-mdc-menu-content {
+      align-items: center;
+      justify-content: center;
+      display: flex;
+    }
+  }
+}
+
 @media only screen and (max-width: 400px) {
   .message-container-own {
     padding: 10px 5px;
     gap: 10px;
+  }
+
+  .add-emoji-container-own {
+    padding: 0 5px;
   }
 }
 
