Add users to channel bottom sheet added

--- a/src/app/main/side-nav/create-channel-dialog/create-channel-dialog.component.html
+++ b/src/app/main/side-nav/create-channel-dialog/create-channel-dialog.component.html
@@ -33,7 +33,7 @@
   </form>
   <button
     class="button-primary"
-    (click)="openAddUsersToChannelDialog()"
+    (click)="openAddUsersToChannel()"
     [disabled]="invalid"
   >
     Weiter
