--- a/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
+++ b/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
@@ -7,7 +7,7 @@
     border-radius: var(--border-radius);
     box-shadow: 0px 6px 10px 0px #00000033 !important;
     padding: 0;
-    max-width: unset !important;
+    max-width: unset;
   }
 }
 
