--- a/src/app/main/main-message-area/thread/thread-new-message/thread-new-message.component.scss
+++ b/src/app/main/main-message-area/thread/thread-new-message/thread-new-message.component.scss
@@ -1,7 +1,7 @@
 ::ng-deep {
   .mat-mdc-menu-panel {
     overflow: hidden !important;
-    max-width: none !important;
+    max-width: none;
     border-radius: 30px;
   }
 
