--- a/src/app/main/main-message-area/message-area-header/channel-new-member/channel-new-member.component.scss
+++ b/src/app/main/main-message-area/message-area-header/channel-new-member/channel-new-member.component.scss
@@ -304,6 +304,10 @@ app-add-users-to-channel {
 }
 
 @media only screen and (max-width: 500px) {
+  :host {
+    width: 100% !important;
+  }
+
   .dialog-wrapper {
     width: 100% !important;
   }
