--- a/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.scss
+++ b/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.scss
@@ -190,7 +190,7 @@ app-attachment-preview {
 @media only screen and (max-width: 600px) {
   ::ng-deep {
     .cdk-overlay-pane {
-      height: fit-content !important;
+      height: fit-content;
     }
   }
 }
