--- a/src/app/shared/profile-info-dialog/profile-info-dialog.component.scss
+++ b/src/app/shared/profile-info-dialog/profile-info-dialog.component.scss
@@ -53,6 +53,13 @@
       justify-content: space-between;
       align-items: center;
 
+      h2 {
+        max-width: 280px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        text-wrap-mode: nowrap;
+      }
+
       span {
         color: var(--purple3-color);
 
