Added some responsiveness.

--- a/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.scss
+++ b/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.scss
@@ -191,6 +191,7 @@ app-attachment-preview {
   ::ng-deep {
     .cdk-overlay-pane {
       height: fit-content;
+      width: fit-content;
     }
   }
 }
