--- a/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
+++ b/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
@@ -200,19 +200,10 @@ mat-toolbar {
   }
 
   ::ng-deep {
-    // .cdk-overlay-connected-position-bounding-box {
-    //   top: 0 !important;
-    //   right: unset !important;
-    //   left: unset !important;
-    //   bottom: unset !important;
-    //   width: 100% !important;
-    //   height: fit-content !important;
-    // }
-
     .cdk-overlay-pane {
-      width: 100% !important;
-      height: 100% !important;
-      right: unset !important;
+      width: 100%;
+      height: 100%;
+      right: unset;
       top: 0;
     }
 
