Added missing JSDoc

--- a/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.html
+++ b/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="dialog-wrapper">
   <div class="header-wrapper">
     <h3>Leute hinzufügen</h3>
-    <mat-icon (click)="dialogRef.close()">close</mat-icon>
+    <mat-icon (click)="dialogRef.close()" class="toolbar-icon">close</mat-icon>
   </div>
   <mat-dialog-content>
     <mat-radio-group
