--- a/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.scss
+++ b/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.scss
@@ -54,6 +54,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    .toolbar-icon {
+      padding: 16px !important;
+      border-radius: 50%;
+    }
     mat-icon {
       &:hover {
         cursor: pointer;
