--- a/src/app/main/side-nav/create-channel-dialog/create-channel-dialog.component.html
+++ b/src/app/main/side-nav/create-channel-dialog/create-channel-dialog.component.html
@@ -5,7 +5,7 @@
 >
   <div class="header-wrapper">
     <h3>Channel erstellen</h3>
-    <mat-icon (click)="dialogRef.close()">close</mat-icon>
+    <mat-icon (click)="dialogRef.close()" class="toolbar-icon">close</mat-icon>
   </div>
   <p>
     Channels dienen deinem Team zur Kommunikation. Am besten sollten sie
