--- a/src/styles.scss
+++ b/src/styles.scss
@@ -168,7 +168,7 @@ button,
 }
 
 mat-icon {
-  display: flex !important;
+  display: flex;
   justify-content: center !important;
   align-items: center !important;
   width: 40px;
