--- a/src/app/main/side-nav/create-channel-dialog/create-channel-dialog.component.scss
+++ b/src/app/main/side-nav/create-channel-dialog/create-channel-dialog.component.scss
@@ -32,6 +32,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    .toolbar-icon {
+      padding: 16px !important;
+      border-radius: 50%;
+    }
+
     mat-icon {
       &:hover {
         cursor: pointer;
