--- a/src/app/main/main-message-area/message-area-header/message-area-header.component.html
+++ b/src/app/main/main-message-area/message-area-header/message-area-header.component.html
@@ -39,6 +39,7 @@
       #memberListMenu="matMenu"
       xPosition="before"
       (closed)="isMenuOpened = ''; toggleBorder('')"
+      class="member-list-menu"
     >
       <app-channel-members-list></app-channel-members-list>
     </mat-menu>
