--- a/src/app/main/main-message-area/message-area-header/channel-description/channel-description.component.scss
+++ b/src/app/main/main-message-area/message-area-header/channel-description/channel-description.component.scss
@@ -210,7 +210,7 @@ app-channel-members-list {
 
     .mat-mdc-menu-content {
       flex-direction: column;
-      width: 100vw;
+      // width: 100vw;
     }
   }
 }
