--- a/src/app/main/main-message-area/thread/thread-header/thread-header.component.scss
+++ b/src/app/main/main-message-area/thread/thread-header/thread-header.component.scss
@@ -20,7 +20,10 @@ section {
 div {
   display: flex;
   align-items: center;
-  gap: 10px;
+
+  h2 {
+    margin-right: 10px;
+  }
 
   span {
     font-size: 18px;
@@ -34,6 +37,8 @@ div {
 
   mat-icon {
     color: var(--purple2-color);
+    font-size: 16px;
+    overflow: unset;
     width: 16px;
     height: 16px;
   }
