Fixed the reactions at the channel chat-history. Also implemented the scroll to bottom at thread.

--- a/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.scss
+++ b/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.scss
@@ -114,6 +114,9 @@ img {
 
 .name {
   font-weight: 700 !important;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   &:hover {
     cursor: pointer;
