--- a/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.scss
+++ b/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.scss
@@ -8,16 +8,16 @@
 .name-and-time-own {
   height: 25px;
   display: flex;
-  flex-direction: row-reverse; /* add this */
+  flex-direction: row-reverse;
   gap: 30px;
   position: relative;
 }
 
 .name {
   font-weight: 700 !important;
-  white-space: nowrap; /* Verhindert Zeilenumbrüche */
-  overflow: hidden; /* Blendet überflüssigen Text aus */
-  text-overflow: ellipsis; /* Fügt "..." an, wenn der Text abgeschnitten wird */
+  white-space: nowrap; 
+  overflow: hidden; 
+  text-overflow: ellipsis;
 
   &:hover {
     cursor: pointer;
