--- a/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-template.component.scss
+++ b/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-template.component.scss
@@ -113,6 +113,10 @@ img {
   object-position: top;
 }
 
+app-own-private-message-show {
+  width: 100%;
+}
+
 @media only screen and (max-width: 600px) {
   ::ng-deep {
     .mat-mdc-menu-content {
