--- a/src/app/main/private-chat/private-chat-header/private-chat-header.component.scss
+++ b/src/app/main/private-chat/private-chat-header/private-chat-header.component.scss
@@ -33,6 +33,13 @@ mat-toolbar {
   font-size: 24px;
   gap: 20px;
   padding: 5px 20px !important;
+  max-width: 90%;
+
+  span {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 
   &:hover,
   &.menu-opened {
