--- a/src/app/main/side-nav/create-channel-dialog/create-channel-dialog.component.scss
+++ b/src/app/main/side-nav/create-channel-dialog/create-channel-dialog.component.scss
@@ -77,6 +77,17 @@
         outline: 1px solid var(--purple1-color);
       }
     }
+
+    .input-error {
+      box-shadow: 0 0 0 1px var(--error-color) !important;
+      &:focus-visible {
+        outline: unset !important;
+      }
+    }
+  }
+
+  .error-message {
+    color: var(--error-color);
   }
   .description {
     input {
