Fixed the responsiveness for the names at privatechat, thread and channel.

--- a/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.scss
+++ b/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.scss
@@ -198,6 +198,12 @@ app-attachment-preview {
   }
 }
 
+@media screen and (max-width: 500px) {
+  .name {
+    max-width: 120px;
+  }
+}
+
 @media screen and (max-width: 400px) {
   .name-and-time {
     gap: 10px;
