--- a/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.scss
+++ b/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.scss
@@ -15,8 +15,8 @@
 
 .name {
   font-weight: 700 !important;
-  white-space: nowrap; 
-  overflow: hidden; 
+  white-space: nowrap;
+  overflow: hidden;
   text-overflow: ellipsis;
 
   &:hover {
@@ -46,9 +46,9 @@
   > p {
     text-align: right;
     max-width: 100%;
-    flex-wrap: wrap; /* Ermöglicht den Zeilenumbruch */
-    word-wrap: break-word; /* Bricht lange Wörter */
-    overflow-wrap: break-word; /* Zusätzlicher Schutz für Zeilenumbrüche */
+    flex-wrap: wrap;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
     word-break: break-all;
     hyphens: auto;
   }
@@ -68,6 +68,12 @@ app-attachment-preview {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media screen and (max-width: 600px) {
+  .name {
+    max-width: 120px;
+  }
 }
 
 @media screen and (max-width: 400px) {
