update scss and responsiv view for login/register components

--- a/src/app/landing-page/login/login.component_media.scss
+++ b/src/app/landing-page/login/login.component_media.scss
@@ -146,6 +146,10 @@
       font-size: unset !important;
     }
   }
+
+  .login mat-card {
+    min-height: fit-content !important;
+  }
 }
 
 /* smallest devices (300px and down) */
