--- a/src/app/landing-page/login/login.component.scss
+++ b/src/app/landing-page/login/login.component.scss
@@ -12,6 +12,8 @@
     justify-content: space-between;
     align-items: center;
 
+    gap: 20px;
+
     min-height: 60%;
     max-height: 80%;
     min-width: 25%;
