--- a/src/app/landing-page/register/select-avatar/select-avatar.component.scss
+++ b/src/app/landing-page/register/select-avatar/select-avatar.component.scss
@@ -12,6 +12,8 @@
     justify-content: space-between;
     align-items: center;
 
+    gap: 20px;
+
     min-height: 75%;
     max-height: 80%;
     min-width: 25%;
@@ -20,6 +22,7 @@
     text-align: center;
 
     padding: 50px;
+    margin-bottom: 20px;
 
     background-color: var(--text-color);
     border-radius: 30px;
@@ -39,6 +42,7 @@
         cursor: pointer;
         color: var(--black-color);
         font-size: 24px;
+        display: flex;
 
         &:hover {
           background-color: var(--bg-color);
@@ -58,7 +62,6 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: var(--gap-16);
 
       .avatar-placeholder {
         position: relative;
@@ -74,6 +77,9 @@
         align-items: center;
 
         mat-icon {
+          display: flex;
+          justify-content: center;
+          align-items: center;
           width: 90px;
           height: 90px;
           font-size: 130px;
