--- a/src/app/landing-page/register/select-avatar/select-avatar.component_media.scss
+++ b/src/app/landing-page/register/select-avatar/select-avatar.component_media.scss
@@ -50,12 +50,8 @@
   }
 
   .headline {
-    flex-direction: column;
-    gap: unset !important;
-
-    mat-icon {
-      justify-content: start !important;
-      width: 100%;
+    h1 {
+      text-wrap: unset !important;
     }
   }
 }
