Added focus for channel and privatechat textarea.

--- a/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.html
+++ b/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.html
@@ -1,6 +1,7 @@
 <section>
   <div class="textarea-container">
     <textarea
+      #messageInput
       [placeholder]="
         'Nachricht an #' + (channel?.channelName ?? 'einen Channel')
       "
